--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
  <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><h3>Kaz's Site</h3></a>
+        <a class="navbar-brand" href="#"><h3>Lankusa</h3></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
