--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <section class="py-5">
   <div class="container">
     <div class="quicksand">
-    <h2>Random Stuff</h2>
+    <h2>Lankusa</h2>
     <h5>Lankusa is an IAL (International Auxiliary Language). Its main hope is to connect the top 10 most spoken languages in the world with one language, connecting the sounds and the words.</h5><br><hr><br>
     <button class="button button3" target="_blank" href=https://discord.gg/Hkn8ewj" >Discord Server</button>
 
