--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
  <head>
     <meta charset="UTF-8">
-  <link rel="icon" href="assets/img/favicon (2).ico">
+  <link rel="icon" href="/assets/img/favicon (2).ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Lankusa official website">
     <!--        Bootstrap CSS: -->
@@ -15,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css?family=Barlow|Cabin|Exo+2|Hind|Montserrat|Muli|Niramit|Noto+Sans|Noto+Sans+TC|Nunito|Open+Sans|Questrial|Quicksand|Ubuntu|Varela+Round|Work+Sans&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/a7f645871e.js" crossorigin="anonymous"></script>
 
-    <link rel="icon" href="assets/favicon (2).ico">
+    <link rel="icon" href="/assets/img/favicon (2).ico">
     <title>Lankusa conlang</title>
 </head>
 
