--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <header class="masthead">
   <div class="container h-100">
     <div class="row h-100 align-items-center">
-      <div class="col-12 text-center">
+      <div class="col-12 text-center" style="background-image:back.png">
         <h1 class="font-weight-light">Lankusa</h1>
         <p class="lead">By the Lankusa developers</p>
       </div>
