--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+             <li class="nav-item">
+              <a class="nav-link" href="https://docs.google.com/spreadsheets/d/15Li6rR5kWHJakIV1Wh8zYEGMpiLawNPLQYRAe4csZtk/edit#gid=0">Sound Inventory</a>
+             </li>
+             <li class="nav-item">
+              <a class="nav-link" href="https://discord.gg/Sw5p8XY">Discord Server</a>
+             </li>
                  <!--li class="nav-item">
                     <a class="nav-link" href="#heading">Heading</a>
                 </li-->
