--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <!--body style="background-color:#333;"-->
 <body>
  <style>
+  .mainDiv{
+   background-image:url("back.png");
+  }
   body{
 
     font-family: 'Montserrat', sans-serif;
@@ -149,7 +152,7 @@
 <header class="masthead">
   <div class="container h-100">
     <div class="row h-100 align-items-center">
-      <div class="col-12 text-center" style="background-image:back.png">
+      <div class="mainDiv">
         <h1 class="font-weight-light">Lankusa</h1>
         <p class="lead">By the Lankusa developers</p>
       </div>
