--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
       </ul>
     </div>
   </nav-->
-
+ <div>
+  <h6>Conlang Under Construction</h6>
+ </div>
  <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"><h3>Lankusa</h3></a>
