--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <!--body style="background-color:#333;"-->
-<body>
+<style>
   body{
 
     font-family: 'Montserrat', sans-serif;
@@ -107,6 +107,7 @@
  /* color: white;*/
 }
 </style>
+<body>
 
 <!--div class="container-fluid">
   <a class="active" href="index">Home</a>
