--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
   </nav-->
  <div>
-  <h6>Conlang Under Construction</h6>
+  <h6 align="center">Conlang Under Construction</h6>
  </div>
  <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
