--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="row h-100 align-items-center">
       <div class="col-12 text-center" style="background-image:back.png">
         <h1 class="font-weight-light">Lankusa</h1>
-        <p class="lead">By the Lankusa developers</p>
+        <p class="lead">By Kazimir Bodnar</p>
       </div>
     </div>
   </div>
@@ -237,7 +237,7 @@ body {
       <a href="https://discord.gg/Hkn8ewj"><i class="fab fa-discord fa-2x"></i></a>
 
 
-                <h5>&copy; the Lankusa dev team 2020</h5>
+                <h5>&copy; Kazimir Bodnar 2020</h5>
 
     </div>
   </footer>
