--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
              <li class="nav-item">
               <a class="nav-link" href="https://discord.gg/Sw5p8XY">Discord Server</a>
              </li>
+             <li class="nav-item">
+              <a class="nav-link" href="https://github.com/lankusa/words-n-stuff/blob/master/dictionary.md#lankusa-dictionary">Dictionary</a>
+             </li>
                  <!--li class="nav-item">
                     <a class="nav-link" href="#heading">Heading</a>
                 </li-->
